test edit for github pages

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
          <input type="text" ng-model="thc"  placeholder="a tedious or icky household chore"/>
           <input type="text" ng-model="animal"  placeholder="species of  companion animal"/>
          
-           <input type="text" ng-model="animalnoise"  placeholder="pleasing  animal noise"/>
+           <input type="text" ng-model="animalnoise"  placeholder="distinctive animal noise"/>
           <input type="text" ng-model="uselessskill"  placeholder="a useless skill"/>
           <input type="text" ng-model="fooditem"  placeholder="food or snack item"/>
            <input type="text" ng-model="girlname"  placeholder="girl's name"/>
