--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class='container'>
         <div class='header'><img src="img/mad-lib-happy-catface.png"><img src="img/ng-mad-libs-logo.png"></div>
         <hr>
-         <input type="text" ng-model="name"  placeholder="pet animal's name"/>
+         <input type="text" ng-model="name"  placeholder="companion animal's name"/>
        
          <input type="text" ng-model="thc"  placeholder="a tedious or icky household chore"/>
           <input type="text" ng-model="animal"  placeholder="species of  companion animal"/>
